--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 
   <body>
     <a href="javascript:(function(){var seenBooklet=document.createElement('script'); seenBooklet.setAttribute('src','http://localhost:8000/SeenBooklet.js'), document.querySelector('body').appendChild(seenBooklet)})();">Test</a>
+
+    <h1>Whatever title</h1>
+    
+    <p class="startTime">1395554290662</p>
+    <p class="endTime">1395555390662</p>
   </body>
 </html>
