First complete version

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <a href="javascript:(function(){var seenBooklet=document.createElement('script'); seenBooklet.setAttribute('src','http://localhost:8000/SeenBooklet.js'), document.querySelector('body').appendChild(seenBooklet)})();">Test</a>
+    <a href="javascript:(function(){var seenBookmarklet=document.createElement('script'); seenBookmarklet.setAttribute('src','http://localhost:8000/SeenBooklet.js'), document.querySelector('body').appendChild(seenBookmarklet);var seenBookmarkletStyles=document.createElement('link'); seenBookmarkletStyles.setAttribute('rel','stylesheet'); seenBookmarkletStyles.setAttribute('href','http://localhost:8000/SeenBookmarkletStyles.css'); document.querySelector('head').appendChild(seenBookmarkletStyles)})();">Test</a>
 
     <h1>Whatever title</h1>
     
